objects/WT_Third_Party_Data__c.object
<CustomObject>
    <fields>
        <fullName>WT_ACTNUMBUS_MULTITENANT_LOCATION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actnumbus Multitenant Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ACTUAL_CORPORATE_EMPLOYMENT_SIZE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Corporate Employment Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ACTUAL_CORPORATE_SALES_VOLUME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Corporate Sales Volume</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ACTUAL_CREDIT_SCORE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Credit Score</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ACTUAL_LOCATION_EMPLOYMENT_SIZE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Location Employment Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ACTUAL_LOCATION_SALES_VOLUME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Actual Location Sales volume</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_AD_SIZE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ad Size Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_AD_SIZE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ad Size Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_AFFLUENT_NEIGHBORHOOD_LOCATION__c</fullName>
        <label>Affluent Neighborhood Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_ANZSIC_2006_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ANZSIC 2006 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ANZSIC_2006_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ANZSIC 2006 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ASSET_SIZE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Third Party Data</relationshipLabel>
        <relationshipName>Third_Party_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Address_Line_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Address_Line_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Address_Line_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address Line 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_AlternateGrouping__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate Grouping</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Assets_USD__c</fullName>
        <label>Assets (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_BIG_BUSINESS__c</fullName>
        <label>Big Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_BOOKNO__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Book No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_BUILDING_NUM_MULTI_TENANT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Building Num Multi Tenant</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_BUSINESS_SIZE_CHANGE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Size Change</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Bank__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bank</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Branch</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Business_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CALL_STATUS_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Status Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CALL_STATUS_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Status Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CASS_Address_Plus_Suite__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CASS Address Plus Suite</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CASS_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CASS City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CASS_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CASS State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CASS_ZIP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CASS ZIP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CBSA_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBSA Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CBSA_DESCR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CBSA Descr</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CC_Country_Origin__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Country Origin</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CC_Ethnic_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Ethnic Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CC_Filler7__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Filler7</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CC_Group_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Group Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CC_Religion_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Religion Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CC_Spoken_Language__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CC Spoken Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CENSUS_BLOCK_GROUP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Census Block Group</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CORPORATE_EMPLOYMENT_SIZE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corporate Employment Size Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CORPORATE_EMPLOYMENT_SIZE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corporate Employment Size Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CORPORATE_SALES_VOLUME_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corporate Sales Volume Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CORPORATE_SALES_VOLUME_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corporate Sales Volume Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_COUNTY_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_COUNTY_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CREDIT_SCORE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Score Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CREDIT_SCORE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Score Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CSA_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSA Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_CSA_DESCR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CSA Descr</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Census_Tract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Census Tract</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Charter__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Classification__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Classification</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Company_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Company Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Country_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country/Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_DELIVERY_POINT_BAR_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Point Bar Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_D_B_Hoovers_Industry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>D&amp;B Hoovers Industry</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_D_U_N_S_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>D-U-N-S® Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Direct_Marketing_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Direct Marketing Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Direct_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_ENDOFRECORDMARKER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End of Record Marker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ETHNICITY_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ethnicity Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ETHNICITY_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ethnicity Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Employees_All_Sites__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employees (All Sites)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Employees_Single_Site__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employees (Single Site)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_FAX_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FEMALE_OWNER_EXEC__c</fullName>
        <label>Female Owner Exec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_FILLER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filler</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FIRST_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FORGNPAR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forgnpar</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FORTUNE_RANKING__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fortune Ranking</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FRANCHISE_SPECIALTY_CODE_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Specialty Code 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FRANCHISE_SPECIALTY_CODE_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Specialty Code 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FRANCHISE_SPECIALTY_CODE_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Specialty Code 3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FRANCHISE_SPECIALTY_DESC_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Specialty Desc 1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FRANCHISE_SPECIALTY_DESC_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Specialty Desc 2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FRANCHISE_SPECIALTY_DESC_3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Specialty Desc 3</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Franchise_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_FullDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_GENDER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_GOVSEGCD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GOVSEGCD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_HIGHINCOMEEXEC__c</fullName>
        <label>High In Come Exec</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_HIGHTECHBUSINESS__c</fullName>
        <label>High Tech Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_HQ_BRANCH_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HQ Branch Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_HQ_BRANCH_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HQ Branch Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IMPEXPCD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IMPEXPCD</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_INDIVIDUAL_FIRM_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Firm Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_INDIVIDUAL_FIRM_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Firm Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_INDUSTRY_SPECIFIC_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry Specific Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_INDUSTRY_SPECIFIC_DESCRIPTION__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Industry Specific Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_INFOUSAID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Info USA ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WT_INFOUSAPARENTID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Info USA Parent ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_INFOUSASUBSIDIARYID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Info USA subsidiary ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ISIC_Rev_4_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISIC Rev 4 Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_ISIC_Rev_4_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISIC Rev 4 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Headquarters__c</fullName>
        <label>Is Headquarters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_KEY_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Key_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Key ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LAST_NAME__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LATITUDE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Latitude</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LOCATION_EMPLOYMENT_SIZE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Employment Size Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LOCATION_EMPLOYMENT_SIZE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Employment Size Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LOCATION_SALES_VOLUME_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Sales Volume Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LOCATION_SALES_VOLUME_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Sales Volume Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_LONGITUDE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Longitude</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Liabilities_USD__c</fullName>
        <label>Liabilities (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_MATCH_LEVEL_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Match Level Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MEDIUM_SIZE_BUSINESS_ENTREPRENEUR__c</fullName>
        <label>Medium Size Business Entrepreneur</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_METRO_MICRO_INDICATOR__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Metro Micro Indicator</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MODELED_EMPLOYMENT_SIZE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Modeled Employment Size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MSA_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSA Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MSA_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MSA Desc</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MULTITENANT_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Multitenant Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_MULTITENANT_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Multitenant Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NACE_Rev_2_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NACE Rev 2 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NACE_Rev_2_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NACE Rev 2 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NAICS_2017_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS 2017 Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NAICS_2017_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS 2017 Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NAICS_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NAICS_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS Desc</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NAICS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NAICS</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NUMBER_OF_PCS_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number Of PCS Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_NUMBER_OF_PCS_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Number Of PCS Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_OBSOLESCENCE_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Obsolescence Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_OFFICE_SIZE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Size Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_OFFICE_SIZE_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Size Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_OWN_LEASE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Own Lease Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>NonProfit</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_PHONE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_POPULATION_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_POPULATION_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Population Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRESORT_BAG_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presort Bag Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRESORT_BUNDLE_NUMBER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presort Bundle Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRESORT_ENDORSEMENT_LINE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presort Endorsement Line</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRESORT_LINE_OF_TRAVEL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Presort Line Of Travel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRIMARY_CARRIER_ROUTE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Carrier Route Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRIMARY_SIC_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary SIC Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRIMARY_SIC_DESC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary SIC Desc</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRIMARY_STATE_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary State Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PRODUCTION_DATE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_PROFESSIONAL_TITLE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Professional Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_PUBLIC_COMPANY_INDICATOR_CODE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Public Company Indicator Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>